# firuga

./: .gitignore  .rustfmt.toml  Cargo.toml
core/: Cargo.toml
core/src/: main.rs
core/src/components/: _character.rs  mod.rs
core/src/plugins/: mod.rs
core/src/plugins/character/: _initiate.rs  mod.rs
core/src/resources/character/: _stats.rs  mod.rs
core/src/scenes/: mod.rs
main/: Cargo.toml
main/src/: main.rs
shared/: Cargo.toml
