[package]
name = "firuga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
bevy = "0.8.1"
bevy-inspector-egui = "0.13.0"
bevy_mod_debugdump = "0.5.0"
bevy_lint = "0.0.1"
# bevycheck = "0.3.0"
serde = "1.0.147"